# loyverse-sales-reports

./: .gitignore  README.md  pyproject.toml
src/: api.py  data_fetching.py  reporting.py
tests/: test_api.py  test_data_fetching.py  test_smoke.py
