[project]
name = "loyverse-sales-reports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]
