[project]
name = "loyverse-sales-reports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
